--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -24,20 +24,21 @@
         <h1 class="text-5xl">Toronto Adoption Center</h1>
     </div>
 
-    <div class="flex justify-center">
-        <button class="m-3">
+
+    <div class="w-full flex justify-center">
+        <div class="m-3">
             <div class="inline-flex">
                 <div class="rounded-full w-[50px] h-[50px] mr-2 mb-1">
                     <img src="resources/shelter/shelter_logo.png">
                 </div>
-                <a href="shelter_detail_user_view.html" class="flex items-center justify-center"
+                <a href="shelter_detail_user_view.html" class="justify-center text-center items-center"
                     style="display: inline-block; padding: 10px 25px; background-color: #007bff; color: #fff; border: 2px solid #fff; text-decoration: none; border-radius: 10px; transition: background-color 0.3s;"
                     onmouseover="this.style.backgroundColor = '#00008B';"
                     onmouseout="this.style.backgroundColor = '#007bff';">
                     Go To Shelter
                 </a>
             </div>
-        </button>
+        </div>
     </div>
     <section id="pet_gallery" class="w-10/12">
         <div class="grid-cols-1 sm:grid md:grid-cols-1 bg-gray-100 border border-gray-200 p-1 rounded-lg">
@@ -67,22 +68,20 @@
                     <li class="flex items-center justify-start">
                         <button>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 m-3">
+                                stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+                                    d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" />
                             </svg>
                         </button>
-
                     </li>
-                    <li>
+                    <li class="flex items-center justify-start">
                         <button>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 m-3">
+                                stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
+                                    d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
                             </svg>
                         </button>
-
                     </li>
                 </ul>
             </div>
