--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -12,10 +12,18 @@
 <body class="relative flex flex-col justify-center items-center">
 
     <div
-        class="bg-gray-200 border border-gray-300 fixed top-0 right-0 w-[100px] m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
-        <div class="w-full ">
-            Edit Tool
-        </div>
+        class="bg-gray-200 rounded-full border border-gray-300 fixed hidden md:block top-0 right-0 w-[100px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
+        <a href="./shelter_detail_shelter_view_editable.html">
+            <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+            </svg>
+        </a>
+    </div>
+
+    <div
+        class="bg-gray-200 rounded-full border border-gray-300 fixed md:hidden bottom-0 right-0 w-[50px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
         <a href="./shelter_detail_shelter_view_editable.html">
             <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
