--- a/P1/src/shelter_detail_shelter_view_editable.html
+++ b/P1/src/shelter_detail_shelter_view_editable.html
@@ -11,29 +11,50 @@
 
 <body class="relative flex flex-col justify-center items-center">
 
-    <div
-        class="bg-gray-200 border border-gray-300 fixed top-0 right-0 w-[100px] m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
-
-        <div class="w-full ">
-            Save
+    <div class="fixed hidden md:block top-0 right-0 z-50">
+        <div
+            class="relative bg-gray-200 rounded-full border border-gray-300 fixed w-[100px] m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+            <a href="./shelter_detail_shelter_view.html">
+                <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+                </svg>
+            </a>
         </div>
-        <a href="./shelter_detail_shelter_view.html">
-            <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
-            </svg>
-        </a>
-        <div class="w-full ">
-            Discard
+        <div
+            class="relative bg-gray-200 rounded-full border border-gray-300 w-[100px] m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+            <a href="./shelter_detail_shelter_view.html">
+                <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </a>
         </div>
-        <a href="./shelter_detail_shelter_view.html">
-            <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-        </a>
     </div>
 
+    <div class="fixed md:hidden bottom-0 right-0 z-50 w-full p-3">
+        <div class="relative w-full h-[50px] flex">
+
+            <div
+                class="absolute left-0 top-0 bg-gray-200 rounded-full border border-gray-300 fixed w-[50px] !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+                <a href="./shelter_detail_shelter_view.html">
+                    <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+                    </svg>
+                </a>
+            </div>
+            <div
+                class="absolute right-0 top-0 bg-gray-200 rounded-full border border-gray-300 w-[50px] !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+                <a href="./shelter_detail_shelter_view.html">
+                    <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
 
 
     <div class="flex justify-center items-center p-3">
@@ -45,7 +66,7 @@
     <section id="shelter-info" class="p-2 w-3/4 mb-3">
         <div
             class="flex flex-col bg-gray-100 border border-gray-200 rounded-lg shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] md:flex-row md:max w-full">
-            <div class="relative w-full h-[500px] mx-2 overflow-auto">
+            <div class="relative w-full h-[500px] px-2 overflow-auto">
                 <h1 class="inline-block text-4xl mb-4">Mission Statement</h1>
                 <div class="relative mb-3" data-te-input-wrapper-init>
                     <textarea
@@ -56,7 +77,7 @@
                         class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">
                         Mission Statement</label>
                 </div>
-                <div class="absolute y-0py-1 h-1/6 w-full">
+                <div class="relative py-1 w-full">
                     <h1 class="text-4xl mb-4">Contact us!</h1>
                     <div class="relative" data-te-input-wrapper-init>
                         <textarea
