--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -33,10 +33,9 @@
     </div>
 
     <div class="fixed md:hidden bottom-0 right-0 z-50 w-full p-3">
-        <div class="relative w-full h-[50px] flex">
-
+        <div class="relative w-full h-16 flex">
             <div
-                class="absolute left-0 top-0 bg-gray-200 rounded-full border border-gray-300 fixed w-[50px] !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+                class="absolute left-0 top-0 bg-gray-200 rounded-full border border-gray-300 fixed w-16 !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
                 <a href="./shelter_detail_shelter_view.html">
                     <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -45,7 +44,7 @@
                 </a>
             </div>
             <div
-                class="absolute right-0 top-0 bg-gray-200 rounded-full border border-gray-300 w-[50px] !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
+                class="absolute right-0 top-0 bg-gray-200 rounded-full border border-gray-300 w-16 !m-3 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] text-center">
                 <a href="./shelter_detail_shelter_view.html">
                     <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -110,9 +109,23 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                 <!--Carousel items-->
                 <div class="relative w-full h-full overflow-hidden after:clear-both after:block after:content-['']">
                     <!--First item-->
-                    <div class="relative float-left -mr-[100%] w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+                    <div class="relative float-left -mr-[100%] hidden w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
                         data-te-carousel-active data-te-carousel-item style="backface-visibility: hidden">
-                        <img src="resources/shelter/shelter_1.png" class="block object-contain w-full h-full rounded"
+                        <label class="block w-full h-full hover:cursor-pointer" for="image_submit">
+
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="block absolute top-0 left-0 w-full h-full">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                        </label>
+                        <input class="hidden" type="file" id="image_submit" />
+                    </div>
+
+                    <!--Second item-->
+                    <div class="relative float-left -mr-[100%] hidden w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+                        data-te-carousel-item style="backface-visibility: hidden">
+                        <img src="resources/shelter/shelter_1.png" class="block object-contain h-full w-full rounded"
                             alt="..." />
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
@@ -121,7 +134,6 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                                 d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
                     </div>
-                    <!--Second item-->
                     <div class="relative float-left -mr-[100%] hidden w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
                         data-te-carousel-item style="backface-visibility: hidden">
                         <img src="resources/shelter/shelter_2.png" class="block object-contain h-full w-full rounded"
@@ -133,18 +145,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                                 d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
                     </div>
-                    <div class="relative float-left -mr-[100%] hidden w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
-                        data-te-carousel-item style="backface-visibility: hidden">
-                        <label class="block w-full h-full hover:cursor-pointer" for="image_submit">
 
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="block absolute top-0 left-0 w-full h-full">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
-                        </label>
-                        <input class="hidden" type="file" id="image_submit" />
-                    </div>
                 </div>
 
 
@@ -186,67 +187,9 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
         <div class="grid-cols-1 sm:grid md:grid-cols-3 bg-gray-100 border border-gray-200 p-1 rounded-lg">
             <div
                 class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
-                    <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
-                </a>
-                <div class="p-6">
-                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                        Ralph - 3 years - Austrailian Terrier
-                    </h5>
-                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
-                        Hi there! This is a description of what I love doing!
-                    </p>
-                </div>
-            </div>
-            <div
-                class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
-                    <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
-
-                </a>
-                <div class="p-6">
-                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                        Betsy - 3 years - Boston Terrier
-                    </h5>
-                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
-                        Hi there! This is a description of what I love doing!
-                    </p>
-                </div>
-            </div>
-            <div
-                class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
-                    <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
-
-                </a>
-                <div class="p-6">
-                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                        Betsy - 3 years - Boston Terrier
-                    </h5>
-                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
-                        Hi there! This is a description of what I love doing!
-                    </p>
-                </div>
-            </div>
-            <div
-                class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
-                    <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
-                </a>
-                <div class="p-6">
-                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                        Ralph - 3 years - Austrailian Terrier
-                    </h5>
-                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
-                        Hi there! This is a description of what I love doing!
-                    </p>
-                </div>
-            </div>
-            <div
-                class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                 <a href="pet_creation.html">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="block w-auto h-auto">
+                        stroke="currentColor" class="block w-full">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
@@ -257,6 +200,85 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                     </div>
                 </a>
             </div>
+            <div
+                class="relative mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                <a href="pet_detail_shelter_view.html">
+                    <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
+                </a>
+                <div class="p-6">
+                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                        Ralph - 3 years - Austrailian Terrier
+                    </h5>
+                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+                        Hi there! This is a description of what I love doing!
+                    </p>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </div>
+            <div
+                class="relative mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                <a href="pet_detail_shelter_view.html">
+                    <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
+
+                </a>
+                <div class="p-6">
+                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                        Betsy - 3 years - Boston Terrier
+                    </h5>
+                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+                        Hi there! This is a description of what I love doing!
+                    </p>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </div>
+            <div
+                class="relative mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                <a href="pet_detail_shelter_view.html">
+                    <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
+
+                </a>
+                <div class="p-6">
+                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                        Betsy - 3 years - Boston Terrier
+                    </h5>
+                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+                        Hi there! This is a description of what I love doing!
+                    </p>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </div>
+            <div
+                class="relative mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                <a href="pet_detail_shelter_view.html">
+                    <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
+                </a>
+                <div class="p-6">
+                    <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                        Ralph - 3 years - Austrailian Terrier
+                    </h5>
+                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+                        Hi there! This is a description of what I love doing!
+                    </p>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="absolute top-0 right-0 w-16 hover:cursor-pointer hover:scale-110">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </div>
+
         </div>
     </section>
 
