--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -13,7 +13,7 @@
 
     <div
         class="bg-gray-200 rounded-full border border-gray-300 fixed hidden md:block top-0 right-0 w-[100px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
-        <a href="./shelter_detail_shelter_view_editable.html">
+        <a href="./shelter_detail_editable.html">
             <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -23,8 +23,8 @@
     </div>
 
     <div
-        class="bg-gray-200 rounded-full border border-gray-300 fixed md:hidden bottom-0 right-0 w-[50px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
-        <a href="./shelter_detail_shelter_view_editable.html">
+        class="bg-gray-200 rounded-full border border-gray-300 fixed md:hidden bottom-0 right-0 w-16 m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
+        <a href="./shelter_detail_editable.html">
             <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -134,7 +134,7 @@
         <div class="grid-cols-1 sm:grid md:grid-cols-3 bg-gray-100 border border-gray-200 p-1 rounded-lg">
             <div
                 class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
+                <a href="pet_detail_shelter_view.html">
                     <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
                 </a>
                 <div class="p-6">
@@ -148,7 +148,7 @@
             </div>
             <div
                 class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
+                <a href="pet_detail_shelter_view.html">
                     <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
 
                 </a>
@@ -163,7 +163,7 @@
             </div>
             <div
                 class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
+                <a href="pet_detail_shelter_view.html">
                     <img src="resources/pets/boston_terrier.jpg" class="object-contain h-full w-full" alt="Pet 2">
 
                 </a>
@@ -178,7 +178,7 @@
             </div>
             <div
                 class="mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
-                <a href="pet_detail.html">
+                <a href="pet_detail_shelter_view.html">
                     <img src="resources/pets/australian_terrier.png" class="object-contain h-full w-full" alt="Pet 1">
                 </a>
                 <div class="p-6">
