--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -107,8 +107,8 @@
     <h2 class="text-5xl mt-3 mb-1 p-2">Pets Available for Adoption</h2>
     <h2 class="pb-3">Create lasting memories with a new loving companion!</h2>
 
-    <section id="shelter-pets" class="w-8/12 p-3 ">
-        <div class="flex flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md mb-0">
+    <section id="shelter-pets" class="w-full p-3">
+        <div class="stretch flex flex-row m-4 md:max-w-full  bg-white rounded-lg shadow-md mb-0">
             <!-- TODO not collapsed by default when screen size is at least medium -->
             <div class="p-4 shadow-md hidden md:visible w-[220px] md:w-[300px] flex-none sm:flex-none sm:basis-1/4flex "
                 data-te-collapse-item data-te-collapse-horizontal id="collapseWidthExample">
