--- a/P1/src/shelter_signup.html
+++ b/P1/src/shelter_signup.html
@@ -19,11 +19,11 @@
     </style>
 </head>
 <body>
-    <nav class="py-4 px-6 fixed w-full z-10">
-        <div class="container mx-auto">
-            <a href="./main.html">
-                <h1 class="text-3xl font-bold">Pet Pal</h1>
-            </a>
+    <nav class="fixed z-10 w-full">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="./main.html" class="flex items-center">
+            <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
+        </a>
         </div>
     </nav>
     <div class="flex max-h-screen">
