added navar after login/signup and connected the link

--- a/P1/src/login.html
+++ b/P1/src/login.html
@@ -61,9 +61,12 @@
                             </div>
                         </div>
                         <div class="mb-5">
-                            <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg w-full focus:outline-none focus:shadow-outline">
-                                Log In
-                            </button>
+                            <a href="./main_after_login.html">
+                                <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg w-full focus:outline-none focus:shadow-outline">
+                                    Log In
+                                </button>
+                            </a>
+                            
                         </div>
                         <div>
                             <p class="text-center font-medium text-sm text-gray-400">
