--- a/P1/src/shelter_signup.html
+++ b/P1/src/shelter_signup.html
@@ -103,9 +103,11 @@
 
                         <!-- sign up button -->
                         <div class="mb-5">
+                            <a href="./main_after_login.html">
                             <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg w-full focus:outline-none focus:shadow-outline">
                                 Sign Up
                             </button>
+                            </a>
                         </div>
 
                         <div>
