fixed linking issues

--- a/P1/src/main.html
+++ b/P1/src/main.html
@@ -36,7 +36,7 @@
                         <a href="./seeker_signup.html" class="block px-4 py-2 hover:bg-gray-100">Seeker</a>
                     </li>
                     <li>
-                        <a href="./shelter_signup.html" class="block px-4 py-2 hover:bg-gray-100">Shelter</a>
+                        <a href="./signup/first_shelter_signup.html" class="block px-4 py-2 hover:bg-gray-100">Shelter</a>
                     </li>
                     </ul>
                 </div>
