--- a/P1/src/signup/first_shelter_signup.html
+++ b/P1/src/signup/first_shelter_signup.html
@@ -29,6 +29,17 @@
                         Shelter Sign Up
                     </h1>
                     <form>
+                        <!-- Organization Name -->
+                        <div class="mb-5">
+                            <label for="org-name" class="block mb-2 text-sm font-medium text-gray-900">Organization Name</label>
+                            <input type="text" id="org-name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Toronto Community Centre" required>
+                        </div>
+                        <!-- Phone Number -->
+                        <div class="mb-5"> 
+                            <label for="phone" class="block mb-2 text-sm font-medium text-gray-900">Phone number</label>
+                            <input type="tel" id="phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+                        </div>
+
                         <!-- Shelter Logo -->
                         <div class="mb-6">
                             <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Logo</p>
@@ -44,11 +55,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Organization Name -->
-                        <div class="mb-5">
-                            <label for="org-name" class="block mb-2 text-sm font-medium text-gray-900">Organization Name</label>
-                            <input type="text" id="org-name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Toronto Community Centre" required>
-                        </div>
+                        
                         <!-- Shelter gallery -->
                         <div class="mb-5">
                             <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Pictures</p>
@@ -60,7 +67,7 @@
                         </div>
 
                         <!-- Mission Statement -->
-                        <div class="mb-5">
+                        <div class="mb-2">
                             <label for="message" class="block mb-2 text-sm font-medium text-gray-900">Mission Statement</label>
                             <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="Write your Mission Statements"></textarea>
                         </div>
