Change padding for reviews

--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -456,14 +456,14 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
     </section>
 
     <h2 class="text-5xl mt-3 mb-1 p-2">Reviews</h2>
-    <h2 class="pb-3">Tell us about your adoption experience!</h2>
+    <h2>Tell us about your adoption experience!</h2>
 
 
     <section id="shelter-reviews" class="w-10/12">
 
         <div class="grid-cols-1 sm:grid md:grid-cols-2 p-1 rounded-lg m-4">
             <div
-                class="p-4 mx-3 flex flex-col self-start rounded-lg bg-white border border-gray-200 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                class="p-4 mx-3 mt-6 flex flex-col self-start rounded-lg bg-white border border-gray-200 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                 <div class="flex items-center justify-start">
                     <img src="resources/users/user_1.png" class="object-cover rounded-full w-[50px] h-[50px] mr-1 mb-1">
                     <p class="font-bold">Sean S.</p>
@@ -558,7 +558,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
             </div>
 
             <div
-                class="p-4  mx-3 flex flex-col self-start rounded-lg border border-gray-200 bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                class="p-4 mx-3 mt-6 flex flex-col self-start rounded-lg border border-gray-200 bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                 <div class="flex items-center justify-start">
                     <img src="resources/users/user_2.png" class="object-cover rounded-full w-[50px] h-[50px] mr-1 mb-1">
                     <p class="font-bold">Patricia P.</p>
