--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -361,14 +361,14 @@
     </section>
 
     <h2 class="text-5xl mb-1 p-2">Reviews</h2>
-    <h2 class="pb-3">Tell us about your adoption experience!</h2>
+    <h2>Tell us about your adoption experience!</h2>
 
 
     <section id="shelter-reviews" class="w-10/12">
 
         <div class="grid-cols-1 sm:grid md:grid-cols-2 p-1 rounded-lg m-4">
             <div
-                class="p-4 mx-3 flex flex-col self-start rounded-lg bg-white border border-gray-200 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                class="p-4 mx-3 mt-6 flex flex-col self-start rounded-lg bg-white border border-gray-200 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                 <div class="flex items-center justify-start">
                     <img src="resources/users/user_1.png" class="object-cover rounded-full w-[50px] h-[50px] mr-1 mb-1">
                     <p class="font-bold">Sean S.</p>
@@ -477,7 +477,7 @@
             </div>
 
             <div
-                class="p-4  mx-3 flex flex-col self-start rounded-lg border border-gray-200 bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                class="p-4  mx-3 mt-6 flex flex-col self-start rounded-lg border border-gray-200 bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                 <div class="flex items-center justify-start">
                     <img src="resources/users/user_2.png" class="object-cover rounded-full w-[50px] h-[50px] mr-1 mb-1">
                     <p class="font-bold">Patricia P.</p>
@@ -639,7 +639,7 @@
                 </div>
                 <div class="relative" data-te-input-wrapper-init>
                     <textarea
-                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-2 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                         id="review" rows="3" placeholder="Your message"></textarea>
                     <label for="review"
                         class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">
