Re-add ability to create new pet listing

--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -348,6 +348,27 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                     <!-- Skeleton Card 1 -->
                     <div
                         class="
+                                                   relative max-w-sm  bg-cover bg-no-repeat
+                                                   mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
+                        <a href="pet_creation.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="block w-full">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <div class="p-6">
+                                <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+                                    Create a new pet listing!
+                                </p>
+                            </div>
+                            <div
+                                class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-[hsl(0,0%,98.4%,0.2)] bg-fixed opacity-0 transition duration-300 ease-in-out hover:shadow-lg hover:opacity-100">
+                            </div>
+                        </a>
+
+                    </div>
+                    <div
+                        class="
                                                        relative max-w-sm  bg-cover bg-no-repeat
                                                        mx-3 mt-6 flex flex-col self-start rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 sm:shrink-0 sm:grow sm:basis-0">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -376,6 +397,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                             </div>
                         </a>
                     </div>
+
                     <div
                         class="
                                 relative max-w-sm  bg-cover bg-no-repeat
