fixed one tiny margin property

--- a/P1/src/seeker_signup.html
+++ b/P1/src/seeker_signup.html
@@ -67,7 +67,7 @@
                             <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                         </button>
 
-                        <div>
+                        <div class="mb-2">
                             <p class="text-sm font-medium text-gray-500">
                                 Not a Pet Seeker? <a href="./signup/first_shelter_signup.html" class="font-medium text-blue-600 hover:underline">Pet Shelter Sign Up</a>
                             </p>
