--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -35,11 +35,10 @@
     </div>
     <section id="pet_gallery" class="p-2 w-3/4 mb-3">
         <div
-            class="w-full flex flex-col border bg-white border-gray-300 rounded-lg shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] md:flex-row md:max w-full">
+            class="w-full flex flex-col border bg-white border-gray-300 rounded-lg shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] md:flex-row md:max">
 
             <div class="w-full grid-cols-1 sm:grid md:grid-cols-1 bg-white border border-gray-200 rounded-lg">
-                <div id="carousel" class="relative w-full h-[500px] bg-gray-200" data-te-carousel-init
-                    data-te-ride="carousel">
+                <div id="carousel" class="relative w-full bg-gray-200" data-te-carousel-init data-te-ride="carousel">
                     <!--Carousel indicators-->
                     <div class="absolute bottom-0 left-0 right-0 z-[2] mx-[15%] mb-4 flex list-none justify-center p-0"
                         data-te-carousel-indicators>
@@ -352,6 +351,19 @@
                     </ul>
 
                 </div>
+
+                <div
+                    class="flex justify-between  text-2xl mt-6 mb-1 items-center font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+                    <h5>
+                        Pet Status
+                    </h5>
+                    <div class="bg-green-600 h-6 w-6 rounded-full text-right">
+
+                    </div>
+                </div>
+                <hr class="my-2">
+
+                <p>DunDun is waiting to be adopted!</p>
             </div>
         </div>
     </section>
